--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "firebase": "^4.1.2",
     "react": "16.0.0-alpha.6",
     "react-native": "https://github.com/expo/react-native/archive/sdk-17.0.0.tar.gz",
+    "react-native-router-flux": "^3.35.0",
     "react-redux": "^5.0.5",
     "redux": "^3.7.0",
     "redux-thunk": "^2.2.0"
